fix: Account amount alignment

--- a/front-end/src/components/AccountList.css
+++ b/front-end/src/components/AccountList.css
@@ -71,6 +71,7 @@
     font-weight: 600;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 .account-breakdown {
